fixed social icons on mobile

--- a/frontend/styles/_mediaQueries.sass
+++ b/frontend/styles/_mediaQueries.sass
@@ -1,6 +1,3 @@
-
-
-
 @media screen and (min-width: 320px) and (max-width : 768px)
 	.wrapper__leftside
 		width: 300px
@@ -12,7 +9,7 @@
 		.myname
 			font-size: 13.96px
 	.wrapper__share
-		width: 150px
+		width: 200px
 		clear: both
 		float: left
 		margin-left: 50%
